--- a/pkg-vip.bib
+++ b/pkg-vip.bib
@@ -6,6 +6,22 @@
   subtitle = {A Guide for Making Black Box Models Explainable}
 }
 
+@Manual{ingredients-pkg,
+  title = {ingredients: Effects and Importances of Model Ingredients},
+  author = {Przemyslaw Biecek},
+  year = {2019},
+  note = {R package version 0.3.3},
+  url = {https://CRAN.R-project.org/package=ingredients},
+}
+
+@Manual{microbenchmark-pkg,
+  title = {microbenchmark: Accurate Timing Functions},
+  author = {Olaf Mersmann},
+  year = {2018},
+  note = {R package version 1.4-6},
+  url = {https://CRAN.R-project.org/package=microbenchmark},
+}
+  
 @Manual{R6-pkg,
   title = {R6: Encapsulated Classes with Reference Semantics},
   author = {Winston Chang},
